# cmake_demo

./: README.md
demo1/: CMakeLists.txt  README
demo1/include/: hello.h
demo1/src/: CMakeLists.txt
demo1/src/main/: CMakeLists.txt  main.cpp
demo1/src/util/: CMakeLists.txt  hello.c
qtmain/: CMakeLists.txt
qtmain/forms/: mainwindow.qrc  mainwindow.ui
